--- a/all-sets.html
+++ b/all-sets.html
@@ -97,9 +97,9 @@
 			</div>
 		
 			<a href="/sets/a" class="set-row"> 
-				<img src="/sets/a-files/icon.png">
+				<img src="/sets/WoA-files/icon.png">
 				<div class="set-title">War Of Azurite</div>
-				<div>a</div>
+				<div>WoA</div>
 				<div>202</div>
 			</a>
 			</div>
